<resources>
    <string name="app_name">ProfessionalServices</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Whebtos Professional Services</string>
    <string name="nav_header_subtitle">whebtos.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_bookings">Bookings</string>
    <string name="menu_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">LoginActivity</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="login_text">Login</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="new_here_text">New Here ?</string>
    <string name="sign_up_text">Sign up</string>
    <string name="name_text">Name</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="privacy_text">By creating an account, you agree to the \nTerms and Use and Privacy Policy</string>
    <string name="already_account_text">Already have an account ?</string>

    <string name="about_activity_label">About ALC</string>

    <string name="profile_activity_label">My profile</string>
    <string name="profile_name">User Name</string>
    <string name="profile_track">User Bio</string>

    <string name="display_country">Country</string>
    <string name="profile_country">Kenya</string>

    <string name="display_email">Email</string>
    <string name="profile_email">whebtos@gmail.com</string>

    <string name="display_number">Mobile</string>
    <string name="profile_number">+254700000000</string>

    <!-- authentication -->
    <string name="btn_login">Login</string>
    <string name="btn_login_google">Continue With Google</string>
    <string name="btn_login_fb">Continue With Facebook</string>
    <string name="btn_login_outlook">Continue With Outlook</string>
    <string name="btn_login_email">Continue With Email</string>
    <string name="login_message">Please sign in to Professional Services to continue</string>
    <string name="email_address">Email Address</string>
    <string name="user_name">User Name</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account yet? </string>
    <string name="or">or</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="click_here_to_register">Click here to Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="id_number">Id Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="isServiceProvider">I provide services</string>
    <string name="short_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>


    <string name="service_url">https://services3.arcgis.com/kUatCIwPzByJQvIx/ArcGIS/rest/services/Professional_Services/FeatureServer/0</string>

</resources>