<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="50sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/forgot_password"
        android:layout_marginTop="60dp"
        />

    <EditText
        android:id="@+id/et_old_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/old_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"

        android:inputType="textPassword"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_custom"
        android:text="@string/submit"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_centerInParent="true"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:text="@string/already_have_an_account"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/btn_login_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_custom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:layout_centerInParent="true"
        android:text="@string/login"
        />

</LinearLayout>