<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200sp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150sp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="10sp"
                android:scaleType="centerInside"
                android:src="@drawable/logo" />
        </LinearLayout>


        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_id_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:hint="@string/id_number"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_email_address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp">

            <CheckBox
                android:id="@+id/cb_is_service_provider"
                android:layout_width="50sp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/isServiceProvider"
                android:textColor="@color/black"
                android:textSize="15sp">

            </TextView>
        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_custom"

            android:text="@string/submit"
            android:textColor="@color/white"

            />

    </LinearLayout>
</ScrollView>